# shelter-core

./: .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
shelter-model/: CMakeLists.txt
shelter-model/include/shelter-model/: device_descriptor.hpp  error.hpp
shelter-model/src/shelter-model/: device_descriptor.cpp  error.cpp
shelter-utils/: CMakeLists.txt
shelter-utils/include/shelter-utils/: buffer_reader.hpp  buffer_writer.hpp  byte_order.hpp  ssid_device_descriptor.hpp
shelter-utils/include/shelter-utils/private/: base64.hpp  crc8.hpp
shelter-utils/src/: base64.cpp  buffer_reader.cpp  buffer_writer.cpp  crc8.cpp  ssid_device_descriptor.cpp
tests/: CMakeLists.txt
tests/shelter-utils/: CMakeLists.txt  base64_test.cpp  crc8.cpp  ssid_device_descriptor.cpp  ssid_device_descriptor_test.cpp
